--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,9 +1,30 @@
 <ion-content>
-  <ion-slides [options]="slideOpts">
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>        
+        <h3>Peliculas Recientes</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <app-slideshow-backdrop [Peliculas]="peliculasRecientes"></app-slideshow-backdrop>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>        
+        <h3>Cartelera</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <app-slideshow-poster [Peliculas]="peliculasRecientes"></app-slideshow-poster>
+
+  <!-- <ion-slides [options]="slideOpts">
     <ion-slide *ngFor="let pelicula of peliculasRecientes">
       <ion-card>
         <img [src]="pelicula.backdrop_path | imagen"/>
       </ion-card>
     </ion-slide>
-  </ion-slides>
+  </ion-slides> -->
 </ion-content>
