Pares y pipe de pares

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -28,7 +28,7 @@
     </ion-row>
   </ion-grid>
 
-  <app-slideshow-poster [Peliculas]="populares"></app-slideshow-poster>
+  <app-slideshow-pares [Peliculas]="populares"></app-slideshow-pares>
 
   <!-- <ion-slides [options]="slideOpts">
     <ion-slide *ngFor="let pelicula of peliculasRecientes">
