--- a/src/app/components/slideshow-pares/slideshow-pares.component.html
+++ b/src/app/components/slideshow-pares/slideshow-pares.component.html
@@ -8,4 +8,9 @@
       </ion-col>
     </ion-row>
   </ion-slide>
+  <ion-slide class="slide-mas">
+    <ion-button class="btn-mas" (click)="onClick()" expand="full" size="large">
+      <ion-icon slot="icon-only" name="add"></ion-icon>
+    </ion-button>
+  </ion-slide>
 </ion-slides>
