--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -28,7 +28,7 @@
     </ion-row>
   </ion-grid>
 
-  <app-slideshow-pares [Peliculas]="populares"></app-slideshow-pares>
+  <app-slideshow-pares [Peliculas]="populares" (cargarMas)="cargarMas()"></app-slideshow-pares>
 
   <!-- <ion-slides [options]="slideOpts">
     <ion-slide *ngFor="let pelicula of peliculasRecientes">
