--- a/src/app/components/slideshow-backdrop/slideshow-backdrop.component.html
+++ b/src/app/components/slideshow-backdrop/slideshow-backdrop.component.html
@@ -1,6 +1,6 @@
 <ion-slides [options]="slideOpts">
   <ion-slide *ngFor="let pelicula of Peliculas">
-    <ion-card>
+    <ion-card (click)="verDetalle( pelicula.id )">
       <img [src]="pelicula.backdrop_path | imagen"/>
     </ion-card>
   </ion-slide>
