--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -3,13 +3,13 @@
     <h1>{{pelicula.title}}</h1>
   </ion-label>
 
-  <img [src]="pelicula.backdrop_path | imagen" *ngIf="pelicula.backdrop_path">
+  <img [src]="pelicula.backdrop_path | imagen">
 
   <ion-grid>
     <ion-row>
       <ion-col size="4" class="poster-detalle-sobre">
         <ion-card class="poster">
-          <img [src]="pelicula.poster_path | imagen" class="poster" *ngIf="pelicula.poster_path">
+          <img [src]="pelicula.poster_path | imagen" class="poster">
         </ion-card>
       </ion-col>
       <ion-col>
