--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,15 +6,18 @@
 <ion-toolbar>
   <ion-searchbar placeholder="Buscar película" (ionChange)="buscar($event)" [debounce]="700" [value]="textoBuscar" animated></ion-searchbar>  
 </ion-toolbar>
+
 <ion-content>
-  <ion-grid>
+
+  <ion-grid *ngIf="buscando">
     <ion-row>
       <ion-col class="ion-text-center">
         <ion-spinner name="crescent"></ion-spinner>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-list>
+
+  <ion-list *ngIf="peliculas.length === 0">
     <ion-list-header>
       <ion-label>Ideas</ion-label>
     </ion-list-header>
@@ -22,4 +25,22 @@
       <ion-label color="primary">{{idea}}</ion-label>
     </ion-item>
   </ion-list>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6" *ngFor=" let pelicula of peliculas">
+        <ion-card (click)="verDetalle(pelicula.id)">
+          <img [src]="pelicula.poster_path | imagen" alt="">
+
+          <ion-card-header>
+            <ion-card-subtitle>{{pelicula.release_date}}</ion-card-subtitle>
+          </ion-card-header>
+
+          <ion-card-content>
+            <h2>{{pelicula.title}}</h2>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
