--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -72,7 +72,7 @@
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button (click)="favorito()">
-        <ion-icon slot="end" name="star-outline"></ion-icon>
+        <ion-icon slot="end" [name]="estrella ? 'star' : 'star-outline'"></ion-icon>
         <ion-label>Favorito</ion-label>
       </ion-button>
     </ion-buttons>
