--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,12 +7,14 @@
     </ion-row>
   </ion-grid>
 
-  <div *ngFor="let genero of generos">
-    <ion-grid fixed>
+  <div *ngFor="let pelicula of favGenre">
+
+    <ion-grid *ngIf="pelicula.pelis.length > 0">
       <ion-row>
-        <ion-col><h4>{{genero.name}}</h4></ion-col>
+        <ion-col><h4>{{ pelicula.genero }}</h4></ion-col>
       </ion-row>
     </ion-grid>
-    <app-slideshow-poster [Peliculas]="peliculas"></app-slideshow-poster>
+
+    <app-slideshow-poster [Peliculas]="pelicula.pelis"></app-slideshow-poster>
   </div>
 </ion-content>
