Detalles de Cards md

--- a/src/app/components/slideshow-poster/slideshow-poster.component.html
+++ b/src/app/components/slideshow-poster/slideshow-poster.component.html
@@ -1,6 +1,6 @@
 <ion-slides [options]="slideOpts">
   <ion-slide *ngFor="let pelicula of Peliculas">
-    <ion-card (click)="verDetalle(pelicula.id)">
+    <ion-card mode="md" (click)="verDetalle(pelicula.id)">
       <img [src]="pelicula.poster_path | imagen" class="poster"/>
     </ion-card>
   </ion-slide>
