--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,17 +1,17 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="movies">
       <ion-icon name="home"></ion-icon>
       <ion-label>Películas</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="search">
       <ion-icon name="search"></ion-icon>
       <ion-label>Buscar</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="favorites">
       <ion-icon name="star-outline"></ion-icon>
       <ion-label>Favoritos</ion-label>
     </ion-tab-button>
